# streamlit_with_mcp

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
config/: mcp_config.json  mcp_config.json.example
src/api/: graph.py
