[project]
name = "streamlit-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "copilotkit>=0.1.42",
    "langchain-mcp-adapters>=0.0.7",
    "langchain-openai>=0.3.12",
    "langgraph-cli[inmem]>=0.1.89",
    "mcp[cli]>=1.6.0",
    "streamlit>=1.44.1",
    "streamlit-chat>=0.1.1",
]
